Improve styles for mobile, fix overflow screen bug

--- a/src/style.css
+++ b/src/style.css
@@ -17,15 +17,25 @@
 	box-sizing: border-box;
 }
 
+html {
+	background-color: red;
+	max-width: 100vw;
+	max-height: 100%;
+	/* overflow: hidden; */
+}
+
 body {
 	background: linear-gradient(to right, #74ebd5, #acb6e5);
 	font-size: 16px;
+	background-color: green;
 }
 
 .container {
 	display: flex;
 	width: 100%;
 	height: 100vh;
+	position: relative;
+	overflow-x: hidden;
 }
 
 .left-panel {
@@ -60,13 +70,14 @@ body {
 	flex-direction: column;
 	/* background: linear-gradient(135deg, #7a7fb5, #5e6390); */
 	border-radius: 12px;
-	padding: 5%;
+	padding: 5% 0 5% 8%;
 	color: white;
 	background-image: url('../assets/images/tokenArea.png');
 	background-size: 100% 100%;
 	background-position: center;
 	background-repeat: no-repeat;
 	transform: scale(0.9);
+	gap: 10px;
 }
 
 .player-text {
@@ -75,10 +86,10 @@ body {
 }
 
 .player-text h1 {
-	font-size: 3rem;
+	font-size: 2rem;
 	font-weight: 900;
 	color: #fff8dc;
-	text-shadow: 2px 2px 2px rgba(0,0,0,0.4), -1px -1px 1px rgba(255,255,255,0.2);
+	text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4), -1px -1px 1px rgba(255, 255, 255, 0.2);
 }
 
 .player-name {
@@ -87,7 +98,7 @@ body {
 }
 
 .player-victory-points {
-	font-size: 3rem;
+	font-size: 2rem;
 	color: white;
 	padding: 5px 15px;
 	border-radius: 10%;
@@ -96,9 +107,7 @@ body {
 
 .player-tokens {
 	display: flex;
-	justify-content: center;
-	gap: 10px;
-	padding: 10px;
+	justify-content: space-evenly;
 }
 
 .player-token {
@@ -106,34 +115,49 @@ body {
 	justify-content: center;
 	align-items: center;
 	font-size: 1.4rem;
-	width: 50px;
-	height: 50px;
+	width: 4rem;
+	aspect-ratio: 1/1;
 	border-radius: 50%;
 	background-color: #ccc;
 	color: black;
 	font-weight: bold;
 	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+	padding: 5px;
+	transition: transform 0.2s ease, box-shadow 0.2s ease;
+	padding-bottom: 3%;
+}
+
+.player-token:hover {
+	transform: scale(1.1);
+	box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
+	cursor: pointer;
 }
 
 .player-bonuses {
 	display: flex;
-	justify-content: end;
-	gap: 10px;
-	padding: 8px;
+	justify-content: space-evenly;
+	padding: 2% 2% 2% 10%;
 }
 
 .player-bonus {
-	width: 50px;
-	height: 70px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	font-weight: bold;
-	font-size: 1.2rem;
-	border-radius: 10px;
+	width: 3rem;
+	aspect-ratio: 2 / 3;
+	font-weight: 900;
+	font-size: 1.4rem;
+	border-radius: 0.5rem;
 	color: white;
-	text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
-	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+	text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
+	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+	transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+.player-bonus:hover {
+	transform: scale(1.1);
+	box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
+	cursor: pointer;
 }
 
 .player-cards-in-hand {
@@ -161,27 +185,31 @@ body {
 	background-size: 100% 100%;
 	background-position: center;
 	background-repeat: no-repeat;
-	padding: 3% 8%;
+	gap: 2%;
+	padding: 3% 10% 10% 0;
 }
 
 .turn h1 {
-	font-size: 3rem;
+	font-size: 2.2rem;
 	font-weight: 900;
 	color: #fff8dc;
-	text-shadow: 2px 2px 2px rgba(0,0,0,0.4), -1px -1px 1px rgba(255,255,255,0.2);
+	text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4), -1px -1px 1px rgba(255, 255, 255, 0.2);
 }
 
 .turn-items {
 	display: flex;
+	justify-content: center;
 	align-items: center;
-	height: 100%;
+	gap: 1%;
+	height: 60%;
+	padding: 5%;
 }
 
 .finish-turn-btn {
 	position: absolute;
-	right: 5rem;
-	bottom: 3rem;
-	width: 20%;
+	right: 20%;
+	bottom: 15%;
+	width: 5rem;
 	height: 15%;
 	background: linear-gradient(135deg, #f9a825, #f57f17);
 	color: white;
@@ -226,7 +254,7 @@ body {
 	height: 100%;
 	padding: 10%;
 	background-image: url('../assets/images/board.png');
-	background-size: cover;
+	background-size: 100% 100%;
 	background-position: center;
 	background-repeat: no-repeat;
 }
@@ -262,6 +290,12 @@ body {
 	width: clamp(50px, 4vw, 80px);
 	border-radius: 50%;
 	font-size: 2rem;
+}
+
+.token:not(.gold):hover {
+	transform: scale(1.1);
+	box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
+	cursor: pointer;
 }
 
 .token::after {
@@ -328,7 +362,7 @@ body {
 }
 
 .card:not(.revers):hover {
-	transform: scale(1.05);
+	transform: scale(1.1);
 }
 
 .card::before,
@@ -431,8 +465,9 @@ body {
 	display: flex;
 	justify-content: center;
 	font-size: 1.4rem;
+	text-align: center;
 	border-radius: 50%;
-	width: 30px;
+	width: 1.8rem;
 	aspect-ratio: 1/1;
 }
 
@@ -609,13 +644,35 @@ body {
 
 @media (max-width: 1200px) {
 	html {
-		font-size: 16px;
+		font-size: 14px;
+	}
+
+	.player-token {
+		font-size: 1.2rem;
+	}
+
+	.turn {
+		height: 40%;
+		padding-top: 20%;
+	}
+
+	.turn h1 {
+		font-size: 1.8rem;
+	}
+
+	.turn .card {
+		width: clamp(80px, 20%, 400px);
+	}
+
+	.cost {
+		font-size: 1rem;
+		width: 1.5rem;
 	}
 }
 
 @media (max-width: 992px) {
 	html {
-		font-size: 16px;
+		font-size: 12px;
 	}
 
 	.card {
@@ -702,6 +759,10 @@ body {
 
 	.card {
 		width: clamp(100px, 20%, 400px);
+	}
+
+	.turn h1 {
+		font-size: 1rem;
 	}
 }
 
